# spotGUI

./: .gitignore  404.html  MANIFEST.in  README.md  index.html  makeSpotGUI.sh  mkdocs.yml  objects.inv  pyproject.toml  runPyinstaller.sh  sitemap.xml  spot_000_experiment.pickle  spot_gui.spec  spot_gui_win.spec
about/: index.html
docs/: download.md
download/: index.html
examples/: index.html
gui/: 00_test_spotGUI.ipynb  spotStart.py  spot_gui.py  spot_riverAMF0000_experiment.pickle
gui/userData/: README.txt  diabetes.arff  diabetes.pkl
gui/userExperiment/: spot_riverAMF0000_experiment.pickle
hyperparameter-tuning-cookbook/: index.html
notebooks/: 00_spotgui_tests.ipynb
reference/SUMMARY/: index.html
search/: search_index.json
spotPythonGUI/: 00_test_spotGUI.ipynb  spotPythonGUI.py
spotPythonGUI/userData/: moon.csv  vector_borne_disease_data.csv
spotPythonGUI/userExperiment/: spot_riverLinReg0000_experiment.pickle
spotRiverGUI/: progress.txt  spotRiverGUI.py  spotRiverGUI0.py  spotRiverGUI_v01.py
spotRiverGUI/db_dicts/: 0001_spotRiver_db.json  spotRiver_db.json  spotRiver_db_default.json
spotRiverGUI/demos/: spot_HARTR_Bike_sharing_00_experiment.pickle  spot_demo_00_experiment.pickle  spot_linreg_trump_00_experiment.pickle  spot_linreg_trump_02_experiment.pickle
spotRiverGUI/userData/: PhishingData.csv  PhishingData_license.txt  bike_sharing_demand.csv  bike_sharing_demand_lagged.csv  bike_sharing_demand_sklearn.csv  friedman.csv  phishingRiver.csv  user_data.csv
spotRiverGUI/userPrepModel/: prep_Bikes_river.py  prep_bike_sharing_demand_sklearn.py  prep_generic_num_cat.py  prep_test.py
src/spotGUI/ctk/: CTk.py  HyperparameterFrame.py  SelectOptions.py
src/spotGUI/eda/: pairplot.py
src/spotGUI/gui/: spotPythonGUI.py  spotRun.py
src/spotGUI/tuner/: spotRun.py
test/: test_get_scenario_dict.py  test_get_scenario_dict_2.py  test_spotRun.py
(+15 files in other folders)
